--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Toplhyi",
-    "subTitle":"Toplhyi的烂摊子",
+    "subTitle":"不曾深入苦海，哪来大彻大悟！",
     "avatarUrl":"https://avatars.githubusercontent.com/u/29943772?u=0084e717806403fb39c9a97ca92b10c88e380c3d&v=4",
     "GMEEK_VERSION":"last"
 }
